# Data-Mining-Project

./: .gitignore  README.md  pyproject.toml
domains/e-commerce/: main_ecommerce.ipynb  main_ecommerce.py
domains/education/: main_education.ipynb  main_education.py
domains/finance/: finance_complete.ipynb  main_finance.ipynb
domains/healthcare/: encoded_data.csv  main_health.ipynb  main_health.py  stroke.ipynb  stroke_updated.csv
modules/: __init__.py  tool_apriori.py  tool_decision_tree.py  tool_kmeans.py
